--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/css?family=Press+Start+2P|Varela+Round" rel="stylesheet">
-        <link rel="stylesheet" href="node_modules\normalize.css\normalize.css">
+        <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+        <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <title>Project 2</title>
     </head>
@@ -29,7 +30,7 @@
         <div class="profile-row clearfix">
             <div class="container profile clearfix">
                 <div class="profile-img">
-                    <img src="src\images\responsive-layout-profile.png" alt="profile-pic">
+                    <img src="src/images/responsive-layout-profile.png" alt="profile-pic">
                 </div>
                 <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and am excited to put all my skills to use!</p>
             </div>
@@ -44,32 +45,32 @@
                         <h2>PORTFOLIO</h2>
                     </div>
                     <div class="portfolio-item">
-                        <img src="src/images\portfolio-1.png" alt="Marketing Page">
+                        <img src="src/images/portfolio-1.png" alt="Marketing Page">
                         <h3>Marketing Page</h3>
                         <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
                     </div>
                     <div class="portfolio-item">
-                        <img src="src/images\portfolio-2.png" alt="">
+                        <img src="src/images/portfolio-2.png" alt="">
                         <h3>Search Page</h3>
                         <p>This project searches through a specific database to find information that the user is trying to look up</p>
                     </div>
                     <div class="portfolio-item">
-                        <img src="src/images\portfolio-3.png" alt="">
+                        <img src="src/images/portfolio-3.png" alt="">
                         <h3>Travel App</h3>
                         <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
                     </div>
                     <div class="portfolio-item">
-                        <img src="src/images\portfolio-4.png" alt="">
+                        <img src="src/images/portfolio-4.png" alt="">
                         <h3>Map of Favorite Spots</h3>
                         <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
                     </div>
                     <div class="portfolio-item">
-                        <img src="src/images\portfolio-5.png" alt="">
+                        <img src="src/images/portfolio-5.png" alt="">
                         <h3>Photo Gallery</h3>
                         <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
                     </div>
                     <div class="portfolio-item">
-                        <img src="src/images\portfolio-6.png" alt="">
+                        <img src="src/images/portfolio-6.png" alt="">
                         <h3>Calculator</h3>
                         <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
                     </div>
@@ -98,7 +99,7 @@
         <div class="row footer">
             <nav class="container clearfix">
                 <h3>PATRICK MAO</h3>
-                <a class="back-to-top" href="#">BACK TO TOP</a></li>
+                <a class="back-to-top" href="#">BACK TO TOP</a>
                 <ul class="footer-nav">
                     <li><a class="nav-item" href="#">HOME</a></li>
                     <li><a class="nav-item" href="#portfolio">PORTFOLIO</a></li>
